# salary-vs-inflation

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  salary_vs_inflation.py
data/: cpi_by_year.csv
