[project]
name = "salary-vs-inflation"
version = "0.1.0"
description = "Streamlit app to see the effect of inflation on your salary"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pandas>=2.2.2", "streamlit>=1.38.0"]

[project.optional-dependencies]
dev = [
    "hvplot>=0.10.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.2",
    "pytest>=8.3.3",
    "seaborn>=0.13.2",
    "jupyter_bokeh",
    "ruff>=0.6.4",
]

[tool.setuptools.packages]
find = {namespaces = false}  # Disable implicit namespaces


[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "single"
